--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 /node_modules
 package-lock.json
 moviefrontend/node_modules
-moviefrontend/package.json
+moviefrontend/package-lock.json
 moviefrontend/src/Moviesdbyme.js
